<resources>
    <string name="app_name">싹트리</string>
    //로그인,회원가입
    <string name="login" >로그인</string>  //로그인 페이지 로그인
    <string name="userid" >아이디(이메일)</string> //로그인페이지 아이디
    <string name="sign_up" >회원가입</string> //로그인,회원가입페이지 회원가입
    <string name="loginauto">자동로그인</string> //로그인페이지 자동로그인 체크박스

    <string name="email" >이메일</string> //회원가입페이지 이메일
    <string name="password" >비밀번호</string> //로그인,회원가입페이지 전화번호
    <string name="reallypassword">비밀번호 확인</string>
    <string name="name" >이름</string> //회원가입페이지 이름
    <string name="phone_number">전화번호</string> // 회원가입페이지 전화번호
    <string name="birth_date">생년월일</string> //회원가입페이지 생년월일
    <string name="male">남</string> //회원가입페이지 성별 선택
    <string name="female">여</string> //회원가입페이지 성별 선택
    <string name="back_to_login">뒤로가기</string> //회원가입페이지 뒤로가기
    <string name="username">닉네임</string>
    <string name="address">주소</string>
    <string name="test_access">테스트용 접속하기</string> //로그인페이지 테스트 접속
    <string name="select_department">학과</string>

    <!-- 메인 화면 기능 버튼 -->
    <string name="function_1">졸업 요건 분석</string>
    <string name="function_2">자격증 모음</string>
    <string name="function_3">수강과목 추천</string>
    <string name="function_4">필요 서류 모아보기</string>

    <!-- 하단 작은 버튼 -->
    <string name="function_5">학사일정</string>
    <string name="function_6">학사공지</string>
    <string name="function_7">nabest</string>
    <string name="function_8">학식 메뉴</string>

    <!-- 하단 네비게이션 -->
    <string name="nav_button_1">홈</string>
    <string name="nav_button_2">시간표</string>
    <string name="nav_button_3">캠퍼스 지도</string>
    <string name="nav_button_4">내 정보</string>

</resources>